--- a/ForAutomation/config/reports/xmlresults.xml
+++ b/ForAutomation/config/reports/xmlresults.xml
@@ -1,36 +1,94 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<testsuites disabled="0" errors="0" failures="0" tests="23" time="78.957">
- <testsuite name="careers jnj automation sctipts" timestamp="2018-06-01T20:13:27" hostname="localhost" time="36.269" errors="0" tests="11" skipped="3" disabled="0" failures="0">
-  <testcase classname="careers jnj automation sctipts" name="index page UI elements checks" time="0.445" />
-  <testcase classname="careers jnj automation sctipts" name="should verify position search" time="5.722" />
-  <testcase classname="careers jnj automation sctipts" name="should verify location search" time="0.001">
+<testsuites disabled="0" errors="0" failures="1" tests="24" time="72.034">
+ <testsuite name="careers jnj automation sctipts" timestamp="2018-06-05T13:51:24" hostname="localhost" time="28.274" errors="0" tests="12" skipped="5" disabled="0" failures="1">
+  <testcase classname="careers jnj automation sctipts" name="index page UI elements checks" time="0.41" />
+  <testcase classname="careers jnj automation sctipts" name="should verify position search" time="5.568" />
+  <testcase classname="careers jnj automation sctipts" name="should verify location search" time="0">
    <skipped message="Temporarily disabled with xit" />
   </testcase>
-  <testcase classname="careers jnj automation sctipts" name="should verify position details page" time="4.937" />
-  <testcase classname="careers jnj automation sctipts" name="position details page UI elements checks" time="0.001">
+  <testcase classname="careers jnj automation sctipts" name="should verify position details page" time="4.031" />
+  <testcase classname="careers jnj automation sctipts" name="position details page UI elements checks" time="0">
    <skipped message="Temporarily disabled with xit" />
   </testcase>
-  <testcase classname="careers jnj automation sctipts" name="should verify get_alert_field positive validation" time="1.295" />
-  <testcase classname="careers jnj automation sctipts" name="should verify position Details Page Apply button" time="0.001">
+  <testcase classname="careers jnj automation sctipts" name="should verify get_alert_field positive validation" time="1.191" />
+  <testcase classname="careers jnj automation sctipts" name="should verify position Details Page Apply button" time="0">
    <skipped message="Temporarily disabled with xit" />
   </testcase>
-  <testcase classname="careers jnj automation sctipts" name="should verify login Page " time="2.908" />
-  <testcase classname="careers jnj automation sctipts" name="should check uploadResume page" time="5.867" />
-  <testcase classname="careers jnj automation sctipts" name="should check the Select From Prev Resume" time="8.275" />
-  <testcase classname="careers jnj automation sctipts" name="should check the Select From Prev Resume" time="0.889" />
+  <testcase classname="careers jnj automation sctipts" name="should verify login Page " time="2.856" />
+  <testcase classname="careers jnj automation sctipts" name="should login and check uploadResume page" time="8.603" />
+  <testcase classname="careers jnj automation sctipts" name="should check the Select From Prev Resume" time="0">
+   <skipped message="Temporarily disabled with xit" />
+  </testcase>
+  <testcase classname="careers jnj automation sctipts" name="should check the cover letter page" time="0">
+   <skipped message="Temporarily disabled with xit" />
+  </testcase>
+  <testcase classname="careers jnj automation sctipts" name="should check the personal information page" time="0.051">
+   <failure type="exception" message="Failed: No element found using locator: By(xpath, //div[@class = &apos;mat-form-field-infix&apos;]/input[@placeholder=&apos;First Name&apos;])"><![CDATA[NoSuchElementError: No element found using locator: By(xpath, //div[@class = 'mat-form-field-infix']/input[@placeholder='First Name'])
+    at elementArrayFinder.getWebElements.then (C:\Users\Hasmik_Nersesyan\AppData\Roaming\npm\node_modules\protractor\built\element.js:814:27)
+    at ManagedPromise.invokeCallback_ (C:\Users\Hasmik_Nersesyan\AppData\Roaming\npm\node_modules\protractor\node_modules\selenium-webdriver\lib\promise.js:1376:14)
+    at TaskQueue.execute_ (C:\Users\Hasmik_Nersesyan\AppData\Roaming\npm\node_modules\protractor\node_modules\selenium-webdriver\lib\promise.js:3084:14)
+    at TaskQueue.executeNext_ (C:\Users\Hasmik_Nersesyan\AppData\Roaming\npm\node_modules\protractor\node_modules\selenium-webdriver\lib\promise.js:3067:27)
+    at asyncRun (C:\Users\Hasmik_Nersesyan\AppData\Roaming\npm\node_modules\protractor\node_modules\selenium-webdriver\lib\promise.js:2927:27)
+    at C:\Users\Hasmik_Nersesyan\AppData\Roaming\npm\node_modules\protractor\node_modules\selenium-webdriver\lib\promise.js:668:7
+    at <anonymous>
+    at process._tickCallback (internal/process/next_tick.js:188:7)Error
+    at ElementArrayFinder.applyAction_ (C:\Users\Hasmik_Nersesyan\AppData\Roaming\npm\node_modules\protractor\built\element.js:459:27)
+    at ElementArrayFinder.(anonymous function).args [as clear] (C:\Users\Hasmik_Nersesyan\AppData\Roaming\npm\node_modules\protractor\built\element.js:91:29)
+    at ElementFinder.(anonymous function).args [as clear] (C:\Users\Hasmik_Nersesyan\AppData\Roaming\npm\node_modules\protractor\built\element.js:831:22)
+    at personalIndoPage._callee$ (C:\JibeAutomation\jibe0106\ForAutomation\objects\PageObjects\personalInfoPage.js:27:39)
+    at tryCatch (C:\JibeAutomation\jibe0106\ForAutomation\node_modules\babel-polyfill\node_modules\regenerator-runtime\runtime.js:65:40)
+    at Generator.invoke [as _invoke] (C:\JibeAutomation\jibe0106\ForAutomation\node_modules\babel-polyfill\node_modules\regenerator-runtime\runtime.js:303:22)
+    at Generator.prototype.(anonymous function) [as next] (C:\JibeAutomation\jibe0106\ForAutomation\node_modules\babel-polyfill\node_modules\regenerator-runtime\runtime.js:117:21)
+    at step (C:\JibeAutomation\jibe0106\ForAutomation\objects\PageObjects\personalInfoPage.js:3:191)
+    at C:\JibeAutomation\jibe0106\ForAutomation\objects\PageObjects\personalInfoPage.js:3:437
+    at new Promise (<anonymous>)Error
+    at ElementArrayFinder.applyAction_ (C:\Users\Hasmik_Nersesyan\AppData\Roaming\npm\node_modules\protractor\built\element.js:459:27)
+    at ElementArrayFinder.(anonymous function).args [as sendKeys] (C:\Users\Hasmik_Nersesyan\AppData\Roaming\npm\node_modules\protractor\built\element.js:91:29)
+    at ElementFinder.(anonymous function).args [as sendKeys] (C:\Users\Hasmik_Nersesyan\AppData\Roaming\npm\node_modules\protractor\built\element.js:831:22)
+    at personalIndoPage._callee$ (C:\JibeAutomation\jibe0106\ForAutomation\objects\PageObjects\personalInfoPage.js:27:47)
+    at tryCatch (C:\JibeAutomation\jibe0106\ForAutomation\node_modules\babel-polyfill\node_modules\regenerator-runtime\runtime.js:65:40)
+    at Generator.invoke [as _invoke] (C:\JibeAutomation\jibe0106\ForAutomation\node_modules\babel-polyfill\node_modules\regenerator-runtime\runtime.js:303:22)
+    at Generator.prototype.(anonymous function) [as next] (C:\JibeAutomation\jibe0106\ForAutomation\node_modules\babel-polyfill\node_modules\regenerator-runtime\runtime.js:117:21)
+    at step (C:\JibeAutomation\jibe0106\ForAutomation\objects\PageObjects\personalInfoPage.js:3:191)
+    at C:\JibeAutomation\jibe0106\ForAutomation\objects\PageObjects\personalInfoPage.js:3:437
+    at new Promise (<anonymous>)
+From: Task: Run it("should check the personal information page") in control flow
+    at UserContext.<anonymous> (C:\Users\Hasmik_Nersesyan\AppData\Roaming\npm\node_modules\protractor\node_modules\jasminewd2\index.js:94:19)
+    at attempt (C:\Users\Hasmik_Nersesyan\AppData\Roaming\npm\node_modules\protractor\node_modules\jasmine-core\lib\jasmine-core\jasmine.js:4297:26)
+    at QueueRunner.run (C:\Users\Hasmik_Nersesyan\AppData\Roaming\npm\node_modules\protractor\node_modules\jasmine-core\lib\jasmine-core\jasmine.js:4217:20)
+    at QueueRunner.execute (C:\Users\Hasmik_Nersesyan\AppData\Roaming\npm\node_modules\protractor\node_modules\jasmine-core\lib\jasmine-core\jasmine.js:4199:10)
+    at Spec.queueRunnerFactory (C:\Users\Hasmik_Nersesyan\AppData\Roaming\npm\node_modules\protractor\node_modules\jasmine-core\lib\jasmine-core\jasmine.js:909:35)
+    at Spec.execute (C:\Users\Hasmik_Nersesyan\AppData\Roaming\npm\node_modules\protractor\node_modules\jasmine-core\lib\jasmine-core\jasmine.js:526:10)
+    at UserContext.fn (C:\Users\Hasmik_Nersesyan\AppData\Roaming\npm\node_modules\protractor\node_modules\jasmine-core\lib\jasmine-core\jasmine.js:5340:37)
+    at attempt (C:\Users\Hasmik_Nersesyan\AppData\Roaming\npm\node_modules\protractor\node_modules\jasmine-core\lib\jasmine-core\jasmine.js:4297:26)
+    at QueueRunner.run (C:\Users\Hasmik_Nersesyan\AppData\Roaming\npm\node_modules\protractor\node_modules\jasmine-core\lib\jasmine-core\jasmine.js:4217:20)
+    at runNext (C:\Users\Hasmik_Nersesyan\AppData\Roaming\npm\node_modules\protractor\node_modules\jasmine-core\lib\jasmine-core\jasmine.js:4257:20)
+From asynchronous test: 
+Error
+    at Suite.<anonymous> (C:\JibeAutomation\jibe0106\ForAutomation\tests\suites\applyJobTests.js:454:5)
+    at addSpecsToSuite (C:\Users\Hasmik_Nersesyan\AppData\Roaming\npm\node_modules\protractor\node_modules\jasmine-core\lib\jasmine-core\jasmine.js:1107:25)
+    at Env.describe (C:\Users\Hasmik_Nersesyan\AppData\Roaming\npm\node_modules\protractor\node_modules\jasmine-core\lib\jasmine-core\jasmine.js:1074:7)
+    at describe (C:\Users\Hasmik_Nersesyan\AppData\Roaming\npm\node_modules\protractor\node_modules\jasmine-core\lib\jasmine-core\jasmine.js:4399:18)
+    at Object.<anonymous> (C:\JibeAutomation\jibe0106\ForAutomation\tests\suites\applyJobTests.js:20:1)
+    at Module._compile (module.js:652:30)
+    at loader (C:\JibeAutomation\jibe0106\ForAutomation\node_modules\babel-register\lib\node.js:144:5)
+    at Object.require.extensions.(anonymous function) [as .js] (C:\JibeAutomation\jibe0106\ForAutomation\node_modules\babel-register\lib\node.js:154:7)
+    at Module.load (module.js:565:32)]]>
+   </failure>
+  </testcase>
  </testsuite>
- <testsuite name="Header menu test" timestamp="2018-06-01T20:14:03" hostname="localhost" time="42.688" errors="0" tests="12" skipped="0" disabled="0" failures="0">
-  <testcase classname="Header menu test" name="should check menu search" time="0.352" />
-  <testcase classname="Header menu test" name="should check menu countries" time="0.432" />
-  <testcase classname="Header menu test" name="should check menu items for news page URL" time="2.79" />
-  <testcase classname="Header menu test" name="should check menu items for check innovation page URL" time="1.074" />
-  <testcase classname="Header menu test" name="should check menu items for caring-and-giving" time="1.183" />
-  <testcase classname="Header menu test" name="should check menu items" time="2.937" />
-  <testcase classname="Header menu test" name="should check links About Companies" time="5.148" />
-  <testcase classname="Header menu test" name="should check Products of Companies  " time="5.171" />
-  <testcase classname="Header menu test" name="should check Our Companies Procurement" time="5.128" />
-  <testcase classname="Header menu test" name="should check Our Companies Careers" time="5.113" />
-  <testcase classname="Header menu test" name="should check Our Companies Investors" time="5.12" />
-  <testcase classname="Header menu test" name="should check Our Companies Societal" time="5.183" />
+ <testsuite name="Header menu test" timestamp="2018-06-05T13:51:52" hostname="localhost" time="43.76" errors="0" tests="12" skipped="0" disabled="0" failures="0">
+  <testcase classname="Header menu test" name="should check menu search" time="0.485" />
+  <testcase classname="Header menu test" name="should check menu countries" time="0.517" />
+  <testcase classname="Header menu test" name="should check menu items for news page URL" time="3.084" />
+  <testcase classname="Header menu test" name="should check menu items for check innovation page URL" time="1.24" />
+  <testcase classname="Header menu test" name="should check menu items for caring-and-giving" time="0.922" />
+  <testcase classname="Header menu test" name="should check menu items" time="3.074" />
+  <testcase classname="Header menu test" name="should check links About Companies" time="5.138" />
+  <testcase classname="Header menu test" name="should check Products of Companies  " time="5.149" />
+  <testcase classname="Header menu test" name="should check Our Companies Procurement" time="5.137" />
+  <testcase classname="Header menu test" name="should check Our Companies Careers" time="5.14" />
+  <testcase classname="Header menu test" name="should check Our Companies Investors" time="5.121" />
+  <testcase classname="Header menu test" name="should check Our Companies Societal" time="5.111" />
  </testsuite>
 </testsuites>
