--- a/ForAutomation/config/reports/xmlresults.xml
+++ b/ForAutomation/config/reports/xmlresults.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<testsuites disabled="0" errors="0" failures="0" tests="13" time="97.667">
- <testsuite name="careers jnj automation sctipts" timestamp="2018-06-07T14:17:15" hostname="localhost" time="97.667" errors="0" tests="13" skipped="6" disabled="0" failures="0">
-  <testcase classname="careers jnj automation sctipts" name="index page UI elements checks" time="8.543" />
-  <testcase classname="careers jnj automation sctipts" name="should verify position search" time="8.92" />
+<testsuites disabled="0" errors="0" failures="1" tests="13" time="95.013">
+ <testsuite name="careers jnj automation sctipts" timestamp="2018-06-07T14:27:06" hostname="localhost" time="95.013" errors="0" tests="13" skipped="6" disabled="0" failures="1">
+  <testcase classname="careers jnj automation sctipts" name="index page UI elements checks" time="8.326" />
+  <testcase classname="careers jnj automation sctipts" name="should verify position search" time="9.2" />
   <testcase classname="careers jnj automation sctipts" name="should verify location search" time="0">
    <skipped message="Temporarily disabled with xit" />
   </testcase>
-  <testcase classname="careers jnj automation sctipts" name="should verify position details page" time="11.623" />
+  <testcase classname="careers jnj automation sctipts" name="should verify position details page" time="10.103" />
   <testcase classname="careers jnj automation sctipts" name="position details page UI elements checks" time="0">
    <skipped message="Temporarily disabled with xit" />
   </testcase>
-  <testcase classname="careers jnj automation sctipts" name="should verify get_alert_field positive validation" time="7.177" />
-  <testcase classname="careers jnj automation sctipts" name="should verify position Details Page Apply button" time="0.004">
+  <testcase classname="careers jnj automation sctipts" name="should verify get_alert_field positive validation" time="7.606" />
+  <testcase classname="careers jnj automation sctipts" name="should verify position Details Page Apply button" time="0.001">
    <skipped message="Temporarily disabled with xit" />
   </testcase>
-  <testcase classname="careers jnj automation sctipts" name="should verify login Page " time="11.113" />
-  <testcase classname="careers jnj automation sctipts" name="should login and check uploadResume page" time="13.696" />
-  <testcase classname="careers jnj automation sctipts" name="should check the Select From Prev Resume" time="0.008">
+  <testcase classname="careers jnj automation sctipts" name="should verify login Page " time="10.862" />
+  <testcase classname="careers jnj automation sctipts" name="should login and check uploadResume page" time="13.96" />
+  <testcase classname="careers jnj automation sctipts" name="should check the Select From Prev Resume" time="0.016">
    <skipped message="Temporarily disabled with xit" />
   </testcase>
   <testcase classname="careers jnj automation sctipts" name="should check the cover letter page" time="0">
@@ -25,6 +25,61 @@
   <testcase classname="careers jnj automation sctipts" name="should check the personal information page" time="0">
    <skipped message="Temporarily disabled with xit" />
   </testcase>
-  <testcase classname="careers jnj automation sctipts" name="should check the personal information page" time="19.753" />
+  <testcase classname="careers jnj automation sctipts" name="should check the personal information page" time="19.86">
+   <failure type="exception" message="Failed: element not visible
+  (Session info: chrome=67.0.3396.62)
+  (Driver info: chromedriver=2.39.562718 (9a2698cba08cf5a471a29d30c8b3e12becabb0e9),platform=Windows NT 10.0.10586 x86_64)"><![CDATA[ElementNotVisibleError: element not visible
+  (Session info: chrome=67.0.3396.62)
+  (Driver info: chromedriver=2.39.562718 (9a2698cba08cf5a471a29d30c8b3e12becabb0e9),platform=Windows NT 10.0.10586 x86_64)
+    at Object.checkLegacyResponse (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\node_modules\selenium-webdriver\lib\error.js:546:15)
+    at parseHttpResponse (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\node_modules\selenium-webdriver\lib\http.js:509:13)
+    at doSend.then.response (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\node_modules\selenium-webdriver\lib\http.js:441:30)
+    at <anonymous>
+    at process._tickCallback (internal/process/next_tick.js:188:7)
+From: Task: WebElement.click()
+    at thenableWebDriverProxy.schedule (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\node_modules\selenium-webdriver\lib\webdriver.js:807:17)
+    at WebElement.schedule_ (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\node_modules\selenium-webdriver\lib\webdriver.js:2010:25)
+    at WebElement.click (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\node_modules\selenium-webdriver\lib\webdriver.js:2092:17)
+    at actionFn (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\built\element.js:89:44)
+    at Array.map (<anonymous>)
+    at actionResults.getWebElements.then (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\built\element.js:461:65)
+    at ManagedPromise.invokeCallback_ (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\node_modules\selenium-webdriver\lib\promise.js:1376:14)
+    at TaskQueue.execute_ (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\node_modules\selenium-webdriver\lib\promise.js:3084:14)
+    at TaskQueue.executeNext_ (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\node_modules\selenium-webdriver\lib\promise.js:3067:27)
+    at asyncRun (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\node_modules\selenium-webdriver\lib\promise.js:2927:27)Error
+    at ElementArrayFinder.applyAction_ (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\built\element.js:459:27)
+    at ElementArrayFinder.(anonymous function).args [as click] (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\built\element.js:91:29)
+    at ElementFinder.(anonymous function).args [as click] (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\built\element.js:831:22)
+    at personalAddressPage._callee2$ (C:\JibeAutomation_own\jibe0106\ForAutomation\objects\PageObjects\personalAddressPage.js:65:47)
+    at tryCatch (C:\JibeAutomation_own\jibe0106\ForAutomation\node_modules\babel-polyfill\node_modules\regenerator-runtime\runtime.js:65:40)
+    at Generator.invoke [as _invoke] (C:\JibeAutomation_own\jibe0106\ForAutomation\node_modules\babel-polyfill\node_modules\regenerator-runtime\runtime.js:303:22)
+    at Generator.prototype.(anonymous function) [as next] (C:\JibeAutomation_own\jibe0106\ForAutomation\node_modules\babel-polyfill\node_modules\regenerator-runtime\runtime.js:117:21)
+    at step (C:\JibeAutomation_own\jibe0106\ForAutomation\objects\PageObjects\personalAddressPage.js:3:191)
+    at C:\JibeAutomation_own\jibe0106\ForAutomation\objects\PageObjects\personalAddressPage.js:3:437
+    at new Promise (<anonymous>)
+From: Task: Run it("should check the personal information page") in control flow
+    at UserContext.<anonymous> (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\node_modules\jasminewd2\index.js:94:19)
+    at attempt (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\node_modules\jasmine-core\lib\jasmine-core\jasmine.js:4297:26)
+    at QueueRunner.run (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\node_modules\jasmine-core\lib\jasmine-core\jasmine.js:4217:20)
+    at QueueRunner.execute (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\node_modules\jasmine-core\lib\jasmine-core\jasmine.js:4199:10)
+    at Spec.queueRunnerFactory (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\node_modules\jasmine-core\lib\jasmine-core\jasmine.js:909:35)
+    at Spec.execute (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\node_modules\jasmine-core\lib\jasmine-core\jasmine.js:526:10)
+    at UserContext.fn (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\node_modules\jasmine-core\lib\jasmine-core\jasmine.js:5340:37)
+    at attempt (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\node_modules\jasmine-core\lib\jasmine-core\jasmine.js:4297:26)
+    at QueueRunner.run (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\node_modules\jasmine-core\lib\jasmine-core\jasmine.js:4217:20)
+    at runNext (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\node_modules\jasmine-core\lib\jasmine-core\jasmine.js:4257:20)
+From asynchronous test: 
+Error
+    at Suite.<anonymous> (C:\JibeAutomation_own\jibe0106\ForAutomation\tests\suites\applyJobTests.js:479:5)
+    at addSpecsToSuite (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\node_modules\jasmine-core\lib\jasmine-core\jasmine.js:1107:25)
+    at Env.describe (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\node_modules\jasmine-core\lib\jasmine-core\jasmine.js:1074:7)
+    at describe (C:\Users\vahan.bakaryan\AppData\Roaming\npm\node_modules\protractor\node_modules\jasmine-core\lib\jasmine-core\jasmine.js:4399:18)
+    at Object.<anonymous> (C:\JibeAutomation_own\jibe0106\ForAutomation\tests\suites\applyJobTests.js:21:1)
+    at Module._compile (module.js:652:30)
+    at loader (C:\JibeAutomation_own\jibe0106\ForAutomation\node_modules\babel-register\lib\node.js:144:5)
+    at Object.require.extensions.(anonymous function) [as .js] (C:\JibeAutomation_own\jibe0106\ForAutomation\node_modules\babel-register\lib\node.js:154:7)
+    at Module.load (module.js:565:32)]]>
+   </failure>
+  </testcase>
  </testsuite>
 </testsuites>
